<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Aliu Abdul-Mujib O. for Ronma Adedeji of SpineIntel Labs on 11/23/16 12:29 AM
  ~ Last Modified 11/23/16 12:29 AM	,
  ~ During Project SpaceTraders	.
  ~
  ~ Copyright (c) 2016.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="ABOUT APP"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/black" />

                        <com.lucasurbas.masterdetail.ui.widget.HTMLTextView
                            android:id="@+id/about_app_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/about_body"
                             />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="OTHER SETTINGS"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:contentPadding="0dp">

                <LinearLayout
                    android:id="@+id/ronma_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/feeback_and_rep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/list_selector_background"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/refresh_app_data"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/refresh_app_data_desc" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="RESOURCES"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:contentPadding="0dp">

                <LinearLayout
                    android:id="@+id/opensouce_libs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="#1f000000" />

                    <LinearLayout
                        android:id="@+id/tandc_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/list_selector_background"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/data_sources"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/data_sources_desc"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/opensouce_libs_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@android:drawable/list_selector_background"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/open_source_libs"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/open_source_libs_desc" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
